lib/src/compiler/tests/testdata/errors/12.out
error[E002]: wrong type
 --> line:5:15
  |
5 |     #a in (0.."10") == 0
  |               ^^^^ expression should be `integer`, but is `string`
  |